setup/k8s/infra/02-ingress/02-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gzip
  namespace: ingress-traefik-infra
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages
  namespace: ingress-traefik-infra
spec:
  errors:
    status:
      - "502-504"
    query: "/{status}.html"
    service:
      name: custom-error-pages
      namespace: infra
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages-aggressive
  namespace: ingress-traefik-infra
spec:
  errors:
    status:
      - "400"
      - "402-599"
    query: "/{status}.html"
    service:
      name: custom-error-pages
      namespace: infra
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: infra
spec:
  redirectScheme:
    scheme: https
    permanent: true
