setup/k8s/infra/02-ingress/03-custom-error-pages.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: custom-error-pages
    namespace: infra
spec:
    replicas: 1
    selector:
        matchLabels:
            app: custom-error-pages
    template:
        metadata:
            labels:
                app: custom-error-pages
        spec:
            containers:
                - name: nginx
                  image: nginx:alpine
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: html-volume
                        mountPath: /usr/share/nginx/html
                      - name: config-volume
                        mountPath: /etc/nginx/conf.d/default.conf
                        subPath: default.conf
            volumes:
                - name: html-volume
                  configMap:
                      name: custom-error-pages-html
                      items:
                          - key: index.html
                            path: index.html
                          - key: 400.html
                            path: 400.html
                          - key: 401.html
                            path: 401.html
                          - key: 403.html
                            path: 403.html
                          - key: 500.html
                            path: 500.html
                          - key: 502.html
                            path: 502.html
                          - key: 503.html
                            path: 503.html
                - name: config-volume
                  configMap:
                      name: custom-error-pages-html
                      items:
                          - key: default.conf
                            path: default.conf
---
apiVersion: v1
kind: Service
metadata:
    name: custom-error-pages
    namespace: infra
spec:
    selector:
        app: custom-error-pages
    ports:
        - port: 80
          targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: custom-error-pages
    namespace: infra
    annotations:
spec:
    entryPoints:
        - web
        - websecure
        - web-wan
        - websecure-wan
    routes:
        - match: PathPrefix(`/`)
          kind: Rule
          priority: 1
          services:
              - name: custom-error-pages
                port: 80
    tls:
        secretName: wan-wildcard-tls
