setup/k8s/infra/02-ingress/04-edge-routes.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-media-internal
  namespace: infra
spec:
  type: ExternalName
  externalName: traefik.ingress-traefik-media.svc.cluster.local
  ports:
    - name: web
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-media-external
  namespace: infra
spec:
  type: ExternalName
  externalName: traefik.ingress-traefik-media.svc.cluster.local
  ports:
    - name: web
      port: 81
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-internal-catchall
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^.+\.media\.lan$`) || HostRegexp(`^media\.lan$`) || HostRegexp(`^.+\.media\.${WAN_HOSTNAME}$`) || HostRegexp(`^media\.${WAN_HOSTNAME}$`)
      kind: Rule
      priority: 100
      services:
        - name: traefik-media-internal
          port: 80
          passHostHeader: true
      middlewares:
        - name: gzip
          namespace: ingress-traefik-infra
        - name: error-pages
          namespace: ingress-traefik-infra
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-plex-http-bypass
  namespace: infra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`plex.media.${WAN_HOSTNAME}`)
      kind: Rule
      priority: 2000
      services:
        - name: traefik-media-internal
          port: 80
          passHostHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-emby-http-bypass
  namespace: infra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`emby.media.${WAN_HOSTNAME}`)
      kind: Rule
      priority: 2000
      services:
        - name: traefik-media-internal
          port: 80
          passHostHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-external-catchall
  namespace: infra
spec:
  entryPoints:
    - websecure-wan
  routes:
    - match: HostRegexp(`^.+\.media\.${WAN_HOSTNAME}$`) || HostRegexp(`^media\.${WAN_HOSTNAME}$`)
      kind: Rule
      priority: 1000
      services:
        - name: traefik-media-external
          port: 81
          passHostHeader: true
      middlewares:
        - name: gzip
          namespace: ingress-traefik-infra
        - name: error-pages-aggressive
          namespace: ingress-traefik-infra
  tls:
    secretName: wan-wildcard-tls
