setup/k8s/infra/02-ingress/05-wan-cert-controller.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wan-wildcard-cert-controller
  namespace: infra
spec:
  entryPoints:
    - websecure-wan
    - websecure
  routes:
    - match: Host(`${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: custom-error-pages-external
          port: 80
  tls:
    secretName: wan-wildcard-tls
---
apiVersion: v1
kind: Service
metadata:
  name: custom-error-pages-external
  namespace: infra
spec:
  type: ExternalName
  externalName: custom-error-pages.infra.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
